--- a/V7 - Vizualizacao3dModelo_Drone/threejs-drone/index.html
+++ b/V7 - Vizualizacao3dModelo_Drone/threejs-drone/index.html
@@ -10,9 +10,30 @@
             padding: 0;
             overflow: hidden;
         }
+        #overlay {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            color: white;
+            font-family: Arial, sans-serif;
+            font-size: 18px;
+            z-index: 100;
+        }
+        #overlay-right {
+            position: absolute;
+            top: 10px;
+            right: 30px;
+            color: white;
+            font-family: Arial, sans-serif;
+            font-size: 18px;
+            z-index: 100;
+        }
     </style>
 </head>
 <body>
+    <div id="overlay">Recording Time: <span id="recording-time">0.00</span></div>
+    <div id="overlay-right">Current Movement: <span id="current-movement">None</span></div>
+
     <!-- Your content goes here -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
