--- a/V7 - Vizualizacao3dModelo_Drone/threejs-drone/index.html
+++ b/V7 - Vizualizacao3dModelo_Drone/threejs-drone/index.html
@@ -34,10 +34,10 @@
     <div id="overlay">Recording Time: <span id="recording-time">0.00</span></div>
     <div id="overlay-right">Current Movement: <span id="current-movement">None</span></div>
 
-    <!-- Your content goes here -->
+    <!-- Imports of the three js and related -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-    <script src="drone.js"></script>
+    <script src="drone.js"></script> <!-- Loading the client side script -->
 </body>
 </html>
